@startuml

class top.xep0268.calabashes.Livingtems.Living{
    #top.xep0268.calabashes.Fieldfield.Field top.xep0268.calabashes.field;
    #top.xep0268.calabashes.fieldashes.Position position;
    #boolean moveable;
    +top.xep0268.calabashes.Positionld.Position getPosition();
    +boolean isMoveable();
    +void setMoveable(boolean on);
    +boolean move(int dx,int dy);
    +boolean swapWith(top.xep0268.calabashes.Livingtems.Living another);
    +boolean moveOrSwap(int dx,int dy);
    +boolean walkTowards(top.xep0268.calabashes.fieldashes.Position position);
    -boolean pathTo(top.xep0268.calabashes.Fieldfield.Field passed, top.xep0268.calabashes.Positionld.Position position, List<top.xep0268.calabashes.itemsashes.Living> called);
    +boolean exchangeable();
    +String toString();
}

top.xep0268.calabashes.Fieldfield.Field o-- top.xep0268.calabashes.itemsashes.Living
top.xep0268.calabashes.Livingtems.Living *-- top.xep0268.calabashes.Positionld.Position

class top.xep0268.calabashes.itemsashes.Calabash{
    -int order;
    +String toString();
}

top.xep0268.calabashes.Livingtems.Living <|-- top.xep0268.calabashes.itemsashes.Calabash

class top.xep0268.calabashes.itemsashes.Elder{
    -top.xep0268.calabashes.Calabashms.Calabash[] top.xep0268.calabashes;
    +void standAsSnake();
    +String toString();
}

top.xep0268.calabashes.Livingtems.Living <|-- top.xep0268.calabashes.itemsashes.Elder
top.xep0268.calabashes.itemsashes.Elder "7" o-- top.xep0268.calabashes.itemsashes.Calabash

class top.xep0268.calabashes.FollowDemonFollowDemon{
    -int order;
    +String toString();
    +boolean exchangeable();
}

top.xep0268.calabashes.Livingtems.Living <|-- top.xep0268.calabashes.FollowDemonFollowDemon

class top.xep0268.calabashes.itemsashes.ScorpionDemon{
    -int followCount;
    -top.xep0268.calabashes.FollowDemonFollowDemon[] followDemons;
    +void standAsSwing();
    +void standAsArrow();
    +String toString();
    -boolean findPlaceForSwing();
    -boolean findPlaceForArrow();
}

top.xep0268.calabashes.itemsashes.Living <|-- top.xep0268.calabashes.itemsashes.ScorpionDemon
top.xep0268.calabashes.itemsashes.ScorpionDemon "n" ... top.xep0268.calabashes.itemsashes.FollowDemon

class top.xep0268.calabashes.SnakeDemon.SnakeDemon{
    -top.xep0268.calabashes.itemsashes.ScorpionDemon scorpionDemon;
    +void standAsArrow();
    +void standAsSwing();
    +String toString();
}

top.xep0268.calabashes.Livingtems.Living <|-- top.xep0268.calabashes.SnakeDemon.SnakeDemon
top.xep0268.calabashes.itemsashes.SnakeDemon ... top.xep0268.calabashes.itemsashes.ScorpionDemon

class top.xep0268.calabashes.Positionld.Position{
    -int x,y;
    +setPos(int x,int y);
    +int getX();
    +int getY();
    +boolean adjacentWith(top.xep0268.calabashes.Positionld.Position another);
    +top.xep0268.calabashes.fieldashes.Position adjacentPosition(top.xep0268.calabashes.field.Direction dir);
    +boolean equals(top.xep0268.calabashes.Positionld.Position an);
    +top.xep0268.calabashes.fieldashes.Position copy();
    +String toString();
}

class top.xep0268.calabashes.field.Direction{
    -int dir;
    +top.xep0268.calabashes.field.Direction(top.xep0268.calabashes.fieldashes.Position center,target);
    +int dx();
    +int dy();
    +void next();
}

top.xep0268.calabashes.fieldashes.Position -- top.xep0268.calabashes.field.Direction

class top.xep0268.calabashes.Fieldfield.Field{
    +static int N;
    -top.xep0268.calabashes.itemsashes.Living[][] map;
    +boolean addLiving(top.xep0268.calabashes.itemsashes.Living);
    +boolean addLiving(top.xep0268.calabashes.Livingtems.Living,top.xep0268.calabashes.fieldashes.Position);
    +void removeLiving(top.xep0268.calabashes.Positionld.Position);
    +top.xep0268.calabashes.itemsashes.Living livingAt(top.xep0268.calabashes.Positionld.Position);
    +boolean moveLiving(top.xep0268.calabashes.itemsashes.Living,int,int);
    +boolean swapLiving(top.xep0268.calabashes.itemsashes.Living,top.xep0268.calabashes.Livingtems.Living);
    +boolean inside(top.xep0268.calabashes.fieldashes.Position);
    +void draw();
    +boolean Unreachable();
    +top.xep0268.calabashes.fieldashes.Position randomPosition();
}

class top.xep0268.calabashes.formations.Formation{
    #top.xep0268.calabashes.Positionld.Position[] form();
}

class top.xep0268.calabashes.formations.SwingFormation{
}

top.xep0268.calabashes.formations.Formation <|-- top.xep0268.calabashes.formations.SwingFormation

class top.xep0268.calabashes.ArrowFormationowFormation{

}

top.xep0268.calabashes.Formations.Formation <|-- top.xep0268.calabashes.ArrowFormationowFormation

class top.xep0268.calabashes.formations.FormationHandler{
    -Formation formation;
    -top.xep0268.calabashes.Livingtems.Living[] followers;
    -top.xep0268.calabashes.itemsashes.Living leader;
    +void embattle();
}

top.xep0268.calabashes.formations.FormationHandler o-- top.xep0268.calabashes.Formations.Formation

top.xep0268.calabashes.ScorpionDemonorpionDemon ... top.xep0268.calabashes.formations.FormationHandler
top.xep0268.calabashes.items.Elder ... top.xep0268.calabashes.formations.FormationHandler
